bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:5: error: ')' expected but '}' found.
} 
^